--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
+.square {
+    height: 100px;
+    width: 100px;
+    border-style: solid;
+    border-color: black;
+}
+
 .grid {
     display: flex;
-    flex-wrap: wrap;
-    height: 300px;
-    width: 400px;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+    width: 316px;
+    height: 316px;
+}
+
+.mole {
+    background-image: url('images/mole.png');
+    background-size: cover;
+}
+.btn{
+    height:25px;
+    margin-left:10%;
+    background-color: rgb(174, 243, 220);
+    border: 1px;
+   
 }
