--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
     background-size: cover;
 }
 .btn{
-    height:25px;
+    height:30px;
     margin-left:10%;
     background-color: rgb(174, 243, 220);
-    border: 1px;
-   
+    border: black 1px sold;
+    cursor: pointer;
 }
