--- a/style.css
+++ b/style.css
@@ -24,4 +24,6 @@
     background-color: rgb(174, 243, 220);
     border: black 1px sold;
     cursor: pointer;
+    font-size: 16px;
+    padding: 4px 8px;
 }
